--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -88,12 +88,13 @@
             </div>
         </div>
 
+        <!--Export + Log-->
         <div class="content">
             <div class="content-heading">
                 <span>Event-Historie</span>
             </div>
             <div class="row">
-                <a class="btn btn-primary btn-bar"
+                <a class="btn btn-primary"
                    th:href="@{/gruppen2/details/{id}/history(id=${group.getId()})}">Event-Log</a>
 
                 <!--Spacer-->
