--- a/src/main/resources/templates/fragments/groups.html
+++ b/src/main/resources/templates/fragments/groups.html
@@ -36,7 +36,7 @@
 
 <th:block th:fragment="groupcontent">
     <!--Badges-->
-    <div class="content-heading">
+    <div class="content-heading overflow-hidden">
         <span th:replace="~{fragments/groups :: badges}"></span>
     </div>
 
