--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -17,29 +17,29 @@
         <h1>Suchen</h1>
 
         <!--Suchfilter-->
-        <div class="content top">
+        <div class="content top overflow-hidden">
             <form method="post" th:action="@{/gruppen2/search/string}">
-                <div class="row mb-3">
-                    <div class="input-group col mr-2">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text text-monospace">Suchbegriff:</span>
+                <div class="d-flex flex-row flex-wrap mr-n2 mt-n2">
+                    <div class="input-group mr-2 mt-2 flex-grow-1" style="flex-basis: 75%;">
+                        <div class="input-group-prepend" style="max-width: 50%;">
+                            <span class="input-group-text text-monospace overflow-hidden"
+                                  style="text-overflow: ellipsis">Suchbegriff:</span>
                         </div>
                         <input class="form-control" required minlength="1" name="string" type="text">
                     </div>
 
-                    <button class="btn btn-primary" type="submit">Suchen</button>
+                    <button class="btn btn-primary mr-2 mt-2 flex-grow-1" type="submit">Suchen
+                    </button>
                 </div>
             </form>
 
-            <div class="row">
-                <a class="btn btn-info" th:href="@{/gruppen2/search/all}">Alle Anzeigen</a>
+            <div class="d-flex flex-row flex-wrap mt-1 mr-n2">
+                <a class="btn btn-info mt-2 mr-2 flex-grow-1" th:href="@{/gruppen2/search/all}">
+                    Alle Anzeigen</a>
 
-                <!--spacer-->
-                <span class="col"></span>
-
-                <a class="btn btn-info mr-2"
+                <a class="btn btn-info mt-2 mr-2 flex-grow-1"
                    th:href="@{/gruppen2/search/type/{type}(type=${LECTURE})}">Vorlesungen</a>
-                <a class="btn btn-info" type="submit"
+                <a class="btn btn-info mt-2 mr-2 flex-grow-1"
                    th:href="@{/gruppen2/search/type/{type}(type=${PUBLIC})}">Öffentliche Gruppen</a>
             </div>
         </div>
