better responsive design for create

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -14,7 +14,7 @@
 <main th:fragment="bodycontent">
     <div class="container-fluid">
 
-        <h1>Suchen</h1>
+        <h1 class="def-cursor overflow-hidden" style="text-overflow: ellipsis;">Suchen</h1>
 
         <!--Suchfilter-->
         <div class="content top overflow-hidden">
