--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -11,11 +11,12 @@
 <main th:fragment="bodycontent">
     <div class="container">
 
-        <h1 class="def-cursor">Neue Gruppe</h1>
+        <h1 class="def-cursor overflow-hidden" style="text-overflow: ellipsis;">Neue Gruppe</h1>
 
-        <form enctype="multipart/form-data" method="post" th:action="@{/gruppen2/create}">
-            <div class="content">
-                <h3 class="def-cursor">Eigenschaften:</h3>
+        <div class="content overflow-hidden">
+            <form enctype="multipart/form-data" method="post" th:action="@{/gruppen2/create}">
+                <h3 class="def-cursor overflow-hidden" style="text-overflow: ellipsis;">
+                    Eigenschaften:</h3>
 
                 <!--Titel + Beschreibung-->
                 <div class="content-text" th:insert="~{fragments/forms :: meta}"></div>
@@ -24,21 +25,21 @@
 
                 <div class="content-text-in">
                     <!--Gruppentyp-->
-                    <div th:replace="~{fragments/forms :: grouptype}"></div>
+                    <div th:insert="~{fragments/forms :: grouptype}"></div>
 
                     <!--Benutzerlimit-->
-                    <div th:replace="~{fragments/forms :: userlimit}"></div>
+                    <div class="mt-2" th:insert="~{fragments/forms :: userlimit}"></div>
                 </div>
 
                 <!--CSV Import-->
                 <div class="content-text mb-0" th:insert="~{fragments/forms :: csvimport}"></div>
-            </div>
+        </div>
 
-            <div class="content">
-                <!--Submit-->
-                <button class="btn btn-primary btn-block" type="submit">Gruppe Erstellen</button>
-            </div>
-        </form>
+        <div class="content">
+            <!--Submit-->
+            <button class="btn btn-primary btn-block" type="submit">Gruppe Erstellen</button>
+            </form>
+        </div>
     </div>
 </main>
 
