--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -34,12 +34,12 @@
             </form>
 
             <div class="d-flex flex-row flex-wrap mt-1 mr-n2">
-                <a class="btn btn-info mt-2 mr-2 flex-grow-1" th:href="@{/gruppen2/search/all}">
-                    Alle Anzeigen</a>
+                <a class="btn btn-info mt-2 mr-2 flex-grow-1" style="max-width: 250px;"
+                   th:href="@{/gruppen2/search/all}">Alle Anzeigen</a>
 
-                <a class="btn btn-info mt-2 mr-2 flex-grow-1"
+                <a class="btn btn-info mt-2 mr-2 flex-grow-1 ml-auto" style="max-width: 250px;"
                    th:href="@{/gruppen2/search/type/{type}(type=${LECTURE})}">Vorlesungen</a>
-                <a class="btn btn-info mt-2 mr-2 flex-grow-1"
+                <a class="btn btn-info mt-2 mr-2 flex-grow-1" style="max-width: 250px;"
                    th:href="@{/gruppen2/search/type/{type}(type=${PUBLIC})}">Öffentliche Gruppen</a>
             </div>
         </div>
