--- a/src/main/resources/static/css/details.css
+++ b/src/main/resources/static/css/details.css
@@ -3,34 +3,15 @@
     margin-bottom: 15px;
 }
 
-/*Buttons*/
-.edit {
-    font-size: 20px;
-}
-
-.btn-bar {
-    align-self: start;
-}
-
-/*Badges*/
-.badge-pill {
-    align-self: start;
-    margin-right: 10px;
-}
-
-.members .badge {
-    align-self: start;
-    margin-top: 2px;
-}
-
 /*Member List*/
 .members {
     overflow-y: auto;
+    overflow-x: hidden;
     max-height: calc(100vh - 250px);
+    max-width: 100%;
 }
 
-.members li span {
+li span {
     text-overflow: ellipsis;
     overflow: hidden;
-    white-space: nowrap;
 }
