--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -12,7 +12,7 @@
 <main th:fragment="bodycontent">
     <div class="container">
 
-        <h1 class="display-3 def-cursor">UPSI</h1>
+        <h1 class="display-3">UPSI</h1>
 
         <div class="content">
             <p class="lead def-cursor">Da ist wohl etwas schiefgelaufen :(</p>
