--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -11,13 +11,13 @@
 <main th:fragment="bodycontent">
     <div class="container-fluid">
 
-        <h1 class="def-cursor overflow-hidden" style="text-overflow: ellipsis;" th:text="${group.getTitle()}"></h1>
+        <h1 th:text="${group.getTitle()}"></h1>
 
         <div class="d-flex flex-row flex-wrap mr-n4 mt-n2">
             <!--Gruppendetails-->
             <div class="flex-grow-1 mr-4 mt-2" style="flex-basis: 65%;">
 
-                <div class="content overflow-hidden" th:insert="~{fragments/groups :: groupcontent}"></div>
+                <div class="content" th:insert="~{fragments/groups :: groupcontent}"></div>
 
 
                 <!--Integrationen-->
@@ -46,9 +46,9 @@
                 <div class="content overflow-hidden">
                     <!--Button-Bar-->
                     <div class="d-flex flex-row flex-wrap mr-n2 mt-n2">
-                        <a class="btn btn-primary flex-grow-1 mr-2 mt-2" style="max-width: 250px;" href="/gruppen2">Fertig</a>
+                        <a class="btn btn-primary flex-grow-1 mr-2 mt-2" href="/gruppen2">Fertig</a>
 
-                        <div class="ml-auto mr-2 mt-2 flex-grow-1" style="max-width: 250px;">
+                        <div class="ml-auto mr-2 mt-2 flex-grow-1 btn-spacer ml-auto">
                             <form method="post" th:action="@{/gruppen2/details/{id}/leave(id=${group.getId()})}">
                                 <button class="btn btn-danger w-100" type="submit">
                                     Gruppe verlassen
@@ -80,8 +80,8 @@
                     <ul class="list-group">
                         <li class="list-group-item d-flex justify-content-between"
                             th:each="member : ${group.getMembers()}">
-                            <span class="overflow-hidden" th:text="${member.format()}"></span>
-                            <span class="overflow-hidden" th:replace="~{fragments/groups :: userbadges}"></span>
+                            <span th:text="${member.format()}"></span>
+                            <span th:replace="~{fragments/groups :: userbadges}"></span>
                         </li>
                     </ul>
                 </div>
