--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -28,18 +28,19 @@
                         <input class="form-control" required minlength="1" name="string" type="text">
                     </div>
 
-                    <button class="btn btn-primary mr-2 mt-2 flex-grow-1" type="submit">Suchen
+                    <button class="btn btn-primary btn-block mr-2 mt-2 flex-grow-1" type="submit">
+                        Suchen
                     </button>
                 </div>
             </form>
 
             <div class="d-flex flex-row flex-wrap mt-1 mr-n2">
-                <a class="btn btn-info mt-2 mr-2 flex-grow-1" style="max-width: 250px;"
+                <a class="btn btn-info mt-2 mr-2 flex-grow-1"
                    th:href="@{/gruppen2/search/all}">Alle Anzeigen</a>
 
-                <a class="btn btn-info mt-2 mr-2 flex-grow-1 ml-auto" style="max-width: 250px;"
+                <a class="btn btn-info mt-2 mr-2 flex-grow-1 ml-auto"
                    th:href="@{/gruppen2/search/type/{type}(type=${LECTURE})}">Vorlesungen</a>
-                <a class="btn btn-info mt-2 mr-2 flex-grow-1" style="max-width: 250px;"
+                <a class="btn btn-info mt-2 mr-2 flex-grow-1"
                    th:href="@{/gruppen2/search/type/{type}(type=${PUBLIC})}">Öffentliche Gruppen</a>
             </div>
         </div>
