--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -20,7 +20,7 @@
                 <div class="content" th:insert="~{fragments/groups :: groupcontent}"></div>
 
 
-                <!--Dummy Integrationen-->
+                <!--Dummy Integrationen, der Inhalt kommt natürlich aus der Gruppe bzw. von anderen Systemen-->
                 <div class="d-flex flex-row flex-wrap mr-n2 mt-n2">
                     <!--Materialsammlung-->
                     <div th:if="${group.hasMaterial()}" class="content flex-grow-1 mr-2 mt-2">
