--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -12,43 +12,40 @@
 <!--/*@thymesVar id="PUBLIC" type="mops.gruppen2.domain.model.group.Type"*/-->
 
 <main th:fragment="bodycontent">
-    <div class="container-fluid">
+    <h1>Suchen</h1>
 
-        <h1 class="def-cursor overflow-hidden" style="text-overflow: ellipsis;">Suchen</h1>
-
-        <!--Suchfilter-->
-        <div class="content top overflow-hidden">
-            <form method="post" th:action="@{/gruppen2/search/string}">
-                <div class="d-flex flex-row flex-wrap mr-n2 mt-n2">
-                    <div class="input-group mr-2 mt-2 flex-grow-1" style="flex-basis: 75%;">
-                        <div class="input-group-prepend" style="max-width: 50%;">
+    <!--Suchfilter-->
+    <div class="content py-2 px-1 px-sm-3 mx-n2 mx-sm-0">
+        <form method="post" th:action="@{/gruppen2/search/string}">
+            <div class="d-flex flex-row flex-wrap mr-n2 mt-n2">
+                <div class="input-group mr-2 mt-2 flex-grow-1" style="flex-basis: 75%;">
+                    <div class="input-group-prepend" style="max-width: 50%;">
                             <span class="input-group-text text-monospace overflow-hidden"
                                   style="text-overflow: ellipsis">Suchbegriff:</span>
-                        </div>
-                        <input class="form-control" required minlength="1" name="string" type="text">
                     </div>
-
-                    <button class="btn btn-primary btn-block mr-2 mt-2 flex-grow-1" type="submit">
-                        Suchen
-                    </button>
+                    <input class="form-control" required minlength="1" name="string" type="text">
                 </div>
-            </form>
 
-            <div class="d-flex flex-row flex-wrap mt-1 mr-n2">
-                <a class="btn btn-info mt-2 mr-2 flex-grow-1"
-                   th:href="@{/gruppen2/search/all}">Alle Anzeigen</a>
-
-                <a class="btn btn-info mt-2 mr-2 flex-grow-1 ml-auto"
-                   th:href="@{/gruppen2/search/type/{type}(type=${LECTURE})}">Vorlesungen</a>
-                <a class="btn btn-info mt-2 mr-2 flex-grow-1"
-                   th:href="@{/gruppen2/search/type/{type}(type=${PUBLIC})}">Öffentliche Gruppen</a>
+                <button class="btn btn-primary btn-block mr-2 mt-2 flex-grow-1" type="submit">
+                    Suchen
+                </button>
             </div>
-        </div>
+        </form>
 
-        <!--Ergebnisliste-->
-        <div class="content" th:each="group: ${groups}"
-             th:insert="fragments/groups :: groupcontentlink"></div>
+        <div class="d-flex flex-row flex-wrap mt-1 mr-n2">
+            <a class="btn btn-info mt-2 mr-2 flex-grow-1"
+               th:href="@{/gruppen2/search/all}">Alle Anzeigen</a>
+
+            <a class="btn btn-info mt-2 mr-2 flex-grow-1 ml-auto"
+               th:href="@{/gruppen2/search/type/{type}(type=${LECTURE})}">Vorlesungen</a>
+            <a class="btn btn-info mt-2 mr-2 flex-grow-1"
+               th:href="@{/gruppen2/search/type/{type}(type=${PUBLIC})}">Öffentliche Gruppen</a>
+        </div>
     </div>
+
+    <!--Ergebnisliste-->
+    <div class="content py-2 px-1 px-sm-3 mx-n2 mx-sm-0" th:each="group: ${groups}"
+         th:insert="fragments/groups :: groupcontentlink"></div>
 </main>
 
 </body>
